@@ -4,14 +4,17 @@
 package de.uka.ilkd.key.scripts.meta;
 
 import java.util.HashMap;
+import java.util.LinkedList;
 import java.util.List;
 import java.util.Map;
 
-import de.uka.ilkd.key.control.AbstractUserInterfaceControl;
 import de.uka.ilkd.key.scripts.AbstractCommand;
-import de.uka.ilkd.key.scripts.EngineState;
-import de.uka.ilkd.key.scripts.ScriptException;
+import de.uka.ilkd.key.scripts.ScriptCommandAst;
 
+import org.assertj.core.api.Assertions;
+import org.checkerframework.checker.nullness.qual.MonotonicNonNull;
+import org.jspecify.annotations.NullMarked;
+import org.jspecify.annotations.Nullable;
 import org.junit.jupiter.api.Test;
 
 import static org.junit.jupiter.api.Assertions.*;
@@ -25,15 +28,21 @@ public class ValueInjectorTest {
     public void testInjectionSimple() throws Exception {
         PP pp = new PP();
         Map<String, Object> args = new HashMap<>();
+        ScriptCommandAst ast = new ScriptCommandAst("pp", args, new LinkedList<>(),
+            null);
         args.put("b", true);
         args.put("i", 42);
-        args.put("s", "blubb");
 
-        ValueInjector.injection(new PPCommand(), pp, args);
+        assertThrows(ArgumentRequiredException.class, () -> {
+            ValueInjector.injection(new PPCommand(), pp, ast);
+        });
+
+        args.put("q", "blubb");
+        ValueInjector.injection(new PPCommand(), pp, ast);
 
         assertTrue(pp.b);
         assertEquals(42, pp.i);
-        assertEquals("blubb", pp.s);
+        assertEquals("blubb", pp.required);
 
     }
 
@@ -41,19 +50,21 @@ public class ValueInjectorTest {
     public void testRequired() {
         PP pp = new PP();
         Map<String, Object> args = new HashMap<>();
+        ScriptCommandAst ast = new ScriptCommandAst("pp", args, new LinkedList<>(),
+            null);
         args.put("b", "true");
         args.put("s", "blubb");
         assertThrows(ArgumentRequiredException.class,
-            () -> ValueInjector.injection(new PPCommand(), pp, args));
+            () -> ValueInjector.injection(new PPCommand(), pp, ast));
     }
 
     @Test
     public void testInferScriptArguments() throws NoSuchFieldException {
-        List<ProofScriptArgument<PP>> meta = ArgumentsLifter.inferScriptArguments(PP.class, null);
-        assertEquals(3, meta.size());
+        List<ProofScriptArgument> meta = ArgumentsLifter.inferScriptArguments(PP.class);
+        assertEquals(4, meta.size());
 
         {
-            ProofScriptArgument<PP> b = meta.get(0);
+            ProofScriptArgument b = meta.getFirst();
             assertEquals("b", b.getName());
             assertEquals(PP.class.getDeclaredField("b"), b.getField());
             assertEquals(Boolean.TYPE, b.getType());
@@ -61,7 +72,7 @@ public class ValueInjectorTest {
         }
 
         {
-            ProofScriptArgument<PP> i = meta.get(1);
+            ProofScriptArgument i = meta.get(1);
             assertEquals("i", i.getName());
             assertEquals(PP.class.getDeclaredField("i"), i.getField());
             assertEquals(Integer.TYPE, i.getType());
@@ -69,7 +80,7 @@ public class ValueInjectorTest {
         }
 
         {
-            ProofScriptArgument<PP> i = meta.get(2);
+            ProofScriptArgument i = meta.get(2);
             assertEquals("s", i.getName());
             assertEquals(PP.class.getDeclaredField("s"), i.getField());
             assertEquals(String.class, i.getType());
@@ -78,28 +89,77 @@ public class ValueInjectorTest {
 
     }
 
-    public static class PP {
-        @Option("b")
-        boolean b;
-        @Option(value = "i")
-        int i;
-        @Option(value = "s", required = false)
-        String s;
+    @Test
+    public void testFlag() throws ConversionException, ArgumentRequiredException,
+            InjectionReflectionException, NoSpecifiedConverterException {
+        class Options {
+            @Flag
+            boolean a;
+            @Flag
+            boolean b;
+            @Flag
+            boolean c = true;
+        }
+        var arg = new ScriptCommandAst("empty", Map.of("a", "true", "c", false), List.of("b"));
+        var injector = ValueInjector.createDefault().inject(new Options(), arg);
+
+        assertTrue(injector.a, "Field a should be true given as key-value argument");
+        assertTrue(injector.b, "Field b should be true given as positional argument");
+        assertFalse(injector.c, "Field c should be false, given explicitly as key-value argument");
     }
 
-    private static class PPCommand extends AbstractCommand<PP> {
+
+    @Test
+    public void testVarargs() throws ConversionException, ArgumentRequiredException,
+            InjectionReflectionException, NoSpecifiedConverterException {
+        class Varargs {
+            @OptionalVarargs(prefix = "a", as = Boolean.class)
+            Map<String, Boolean> a;
+
+            @OptionalVarargs(prefix = "b", as = Integer.class)
+            Map<String, Integer> b;
+        }
+        var arg = new ScriptCommandAst("empty",
+            Map.of("a1", "true", "b1", "1", "b2", "2", "a2", "false"),
+            List.of());
+        var values = ValueInjector.createDefault().inject(new Varargs(), arg);
+
+        Assertions.assertThat(values.a)
+                .containsEntry("a1", true)
+                .containsEntry("a2", false);
+
+        Assertions.assertThat(values.b)
+                .containsEntry("b1", 1)
+                .containsEntry("b2", 2);
+    }
+
+
+
+    public static class PP {
+        @Option
+        boolean b;
+
+        @Option
+        int i;
+
+        @Option
+        @Nullable
+        String s;
+
+        @Option("q")
+        @MonotonicNonNull
+        String required;
+    }
+
+    @NullMarked
+    private static class PPCommand extends AbstractCommand {
         public PPCommand() {
             super(null);
         }
 
         @Override
-        public PP evaluateArguments(EngineState state, Map<String, Object> arguments) {
-            return null;
-        }
+        public void execute(ScriptCommandAst args) {
 
-        @Override
-        public void execute(AbstractUserInterfaceControl uiControl, PP args, EngineState stateMap)
-                throws ScriptException, InterruptedException {
         }
 
         @Override
